Small Makefile changes, Yocto-related,
	should not affect standalone users.
	Also updated INSTALL.

--- a/INSTALL
+++ b/INSTALL
@@ -10,12 +10,21 @@
  * ===================================================================*/
 
 Manual installation for FM library:
-   - set the environment variable KERNEL_SOURCE which points to the kernel
-	involved in your build process (and CROSS_COMPILE as well)
+   - set PATH and CROSS_COMPILE to point to the cross-toolchain on the host
+   - set KERNEL_SRC to point to the root dir. for the kernel/headers (i.e.
+   the Linux kernel that's contained in the SDK, not other kernel!)
    - make all: will create the binaries for all platforms
-   - male archive: will create the tarball containing all fmlib binaries
-   - copy binary (libfm-xxx.a) to /usr/lib folder on your target root filesystem
-   - copy headers (include/fmd/ dir.) to /usr/include/fmd/ dir. on target
+   - make archive: will create the tarball containing all fmlib binaries
+   - make install-xxx will:
+	* copy binary (libfm-xxx.a) to the ${PREFIX}/lib folder on the target
+	root filesystem pointed to by the ${DESTDIR} variable
+	* copy headers (include/fmd/ dir.) to the ${PREFIX}/include/fmd/ dir.
+	on target rfs
+	* copy doc. files to the ${PREFIX}/share/doc/fm-lib-<version> dir
+	of the same rfs
+
+'make targets' will display a short usage summary, along with the available
+"xxx" variants.
 
 An application that uses this package will have to link with the static
 library and include the necessary headers.
